Created initial theme

--- a/sites/all/themes/accurate/css/pages.css
+++ b/sites/all/themes/accurate/css/pages.css
@@ -12,12 +12,17 @@
  * Body
  */
 
-body {
+html, body {
+  font-family: schoolbook-web, Georgia, "Times New Roman", Times , Serif;
+  color: #222;
+  background-color: #efeeeb;
   margin: 0;
   padding: 0;
 }
 
 #page {
+  padding: 0;
+  margin: 0;
 }
 
 /*
@@ -27,6 +32,7 @@ body {
 
 #skip-link {
   margin: 0;
+
 }
 #skip-link a,
 #skip-link a:visited {
@@ -42,7 +48,82 @@ body {
  * Header
  */
 
-#header {
+#wrap {
+  	min-height: 100%;
+}
+
+.contentWidth {
+  width: 75%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+ 
+
+header {
+  margin: 2em 0;
+  text-transform: uppercase;
+  padding: 1em 0;
+  color: #efebe3;
+}
+
+header > div {
+  border-top: 6px solid #333;
+  border-bottom: 4px solid #333;
+}
+
+#header h1, #header h2 {
+  font-family: "alternate-gothic-no-1-d";
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
+
+#header h1 {
+  margin: .25em 0;
+  color: #222;
+  font-size: 4em;
+  line-height: 1em;
+  text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;
+}
+
+#madeinBadge h1 {
+  margin-top: -2em;
+  background: url(assets/madeinStamford.png) no-repeat;
+  width: 180px;
+  height: 180px;
+  display: block;
+  float: right;
+  text-indent: -999em;
+}
+
+#nav div {
+  margin: 0;
+}
+
+#nav ul {
+  margin: .5em 0;
+  font-family: "futura-pt";
+  padding: .5em 0;
+  border-top: 2px solid #333;
+}
+
+#nav li {
+  display: inline;
+  list-style-type: none;
+  margin-right: 1em;
+}
+
+#nav a:link, #nav a:visited {
+  letter-spacing: .3em;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: #333;
+  text-shadow: -1px 1px 0 #efeeeb, -3px 3px 0 #c5beb3;
+}
+
+#nav a:hover, #nav a:active {
+  color: #bc3f3f;
 }
 
 #logo { /* Wrapping link for logo */
@@ -85,6 +166,14 @@ body {
 /*
  * Main (container for everything else)
  */
+ 
+h1 {
+  text-transform: uppercase;
+  font-family: "alternate-gothic-no-1-d";
+  font-size: 2.4em;
+  line-height: 1em;
+  text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;
+}
 
 #main {
 }
