--- a/sites/all/themes/accurate/css/normalize.css
+++ b/sites/all/themes/accurate/css/normalize.css
@@ -199,14 +199,15 @@ textarea {
 
    */
 
-  font-family: Verdana, Tahoma, "DejaVu Sans", sans-serif;
+  font-family: "jubilat", Helvetica, Arial, Geneva, sans-serif;
 }
 
 /*
  * Addresses margins handled incorrectly in IE6/7
  */
 
-body {
+html, body {
+  padding: 0;
   margin: 0;
 }
 
