--- a/sites/all/themes/accurate/css/pages.css
+++ b/sites/all/themes/accurate/css/pages.css
@@ -13,12 +13,11 @@
  */
 
 html, body {
-  font-family: Georgia, "Times New Roman", Times , Serif;
-  font-size: 16px;
   color: #222;
-  background-color: #efeeeb;
+  background-color: #e2dbc5;
   margin: 0;
   padding: 0;
+  font: 16px Georgia, "Times New Roman", Times , Serif;
 }
 
 #page {
@@ -56,45 +55,94 @@ html, body {
 .contentWidth {
   width: 75%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
  
 
 header {
+  font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
   margin: 2em 0;
   text-transform: uppercase;
   padding: 1em 0;
-  color: #efebe3;
+/*  color: #efebe3;*/
 }
 
 header > div {
-  border-top: 6px solid #333;
   border-bottom: 4px solid #333;
 }
 
+#masthead {
+  font-family: "adrianna-extended";
+  text-transform: uppercase;
+  padding-bottom: 1em;
+  border-bottom: 6px solid #333;
+  overflow: auto;
+  font-size: .8em;
+  font-weight: bold;
+}
+
+#masthead p {
+  display: inline-block;
+  width: 30%;
+  text-align: center;
+  margin: 0 auto;
+  float: left;
+}
+
+#masthead p:first-child {
+  margin-right: 5%;
+}
+
+#masthead p:last-child {
+  margin-left: 5%;
+}
+
 #header h1, #header h2 {
-  font-family: "alternate-gothic-no-1-d", Impact;
-  font-weight: normal;
   margin: 0;
   padding: 0;
 }
 
 #header h1 {
+  display: none;
   margin: .25em 0;
   color: #222;
   font-size: 4em;
   line-height: 1em;
   text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;
+  
+/*  overflow: hidden;
+  text-indent: -9999em;
+  background-image: url(assets/banner.png);
+  width: 900px;
+  height: 50px;
+  display: block;*/
+}
+
+#header h2 {
+  font-family: "adrianna-extended";
+  font-size: 1em;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: normal;
+}
+
+#header img {
+  width: 100%;
+  max-width: 900px;
+  display: block;
+  margin: 1em auto 0 auto;
 }
 
 #madeinBadge h1 {
-  margin-top: -1.8em;
+/*  margin-top: -1.8em;*/
   background: url(assets/madeinStamford.png) no-repeat;
   width: 180px;
   height: 180px;
-  display: block;
-  float: right;
+  display: none;
   text-indent: -999em;
+  position: absolute;
+  right: 180px;
 }
 
 #nav div {
@@ -104,29 +152,37 @@ header > div {
 #nav ul {
   padding: 0;
   margin: 0;
-  font-family: "futura-pt", "Century Gothic", Helvetica, Arial, sans-serif;
   border-top: 2px solid #333;
+  overflow: auto;
+  width: 100%;
 }
 
 #nav li {
-  display: inline-block;
+  float: left;
   list-style-type: none;
+  width: 25%;
+  text-align: center;
 }
 
 #nav a:link, #nav a:visited {
-  padding: .5em .5em .5em 0;
-  margin-right: .5em;
-  border-right: 2px solid #333;
+border-right: 2px solid #333;
+  padding: 8px 0;
+/*  padding: 8px 6px 8px 8px;*/
   display: block;
-  letter-spacing: .3em;
-  font-weight: bold;
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 1.4em;
   color: #333;
-  text-shadow: -1px 1px 0 #efeeeb, -3px 3px 0 #c5beb3;
+  font-weight: bold;
+/*  text-shadow: -1px 1px 0 #efeeeb, -3px 3px 0 #c5beb3;*/
+}
+
+#nav li:last-child a {
+  border-right: 0;
 }
 
 #nav a:hover, #nav a:active {
+  padding-top: 5px;
+  border-top: 3px solid #2c6bc6;
   color: #bc3f3f;
 }
 
@@ -135,6 +191,7 @@ header > div {
   margin: 0;
   padding: 0;
 }
+
 #logo img {
   vertical-align: bottom;
 }
@@ -142,8 +199,8 @@ header > div {
 /* @group Product Filters */
 
 .productFilterBar {
-  font-family: "futura-pt", "Century Gothic", Helvetica, Arial, sans-serif;
-  letter-spacing: .3em;
+  font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
+/*  letter-spacing: .3em;*/
   font-weight: bold;
   padding: .5em 0;
   border-bottom: 3px solid #333;
@@ -153,7 +210,14 @@ header > div {
   display: inline-block;
 }
 
+.views-exposed-form > div{
+  width: 100%;
+  display: table;
+}
+
 .views-exposed-widget {
+  float: none !important;
+  display: table-cell;
   border-top: 2px solid #333;
   border-right: 2px solid #333;
   padding: .5em 1em !important;
@@ -217,10 +281,12 @@ header > div {
  
 h1 {
   text-transform: uppercase;
-  font-family: "alternate-gothic-no-1-d";
-  font-size: 2.4em;
+  font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
+/*  letter-spacing: .3em;*/
+  font-size: 1.4em;
   line-height: 1em;
-  text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;
+  font-weight: bold;
+/*  text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;*/
 }
 
 #main {
@@ -362,12 +428,13 @@ span.field-label { /* The inline field label used by the Fences module */
  */
 
 #footer {
+  font-family: courier;
 }
 
 footer > div {
   border-top: 3px solid #333;
   border-bottom: 6px solid #333;
-  margin-bottom: 2em;
+  margin-bottom: 4em;
 }
 
 /*
