--- a/sites/all/themes/accurate/css/pages.css
+++ b/sites/all/themes/accurate/css/pages.css
@@ -62,9 +62,9 @@ html, body {
 
 header {
   font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
-  margin: 2em 0;
+  margin: 2em 0 0 0;
   text-transform: uppercase;
-  padding: 1em 0;
+  padding: 1em 0 0 0;
 /*  color: #efebe3;*/
 }
 
@@ -125,6 +125,7 @@ header > div {
   text-transform: uppercase;
   text-align: center;
   font-weight: normal;
+  margin: .5em 0 1em 0;
 }
 
 #header img {
@@ -160,7 +161,7 @@ header > div {
 #nav li {
   float: left;
   list-style-type: none;
-  width: 25%;
+  width: 20%;
   text-align: center;
 }
 
@@ -279,7 +280,7 @@ border-right: 2px solid #333;
  * Main (container for everything else)
  */
  
-h1 {
+h2 {
   text-transform: uppercase;
   font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
 /*  letter-spacing: .3em;*/
@@ -297,10 +298,32 @@ h1 {
  */
 
 #content {
+
 }
 
 #content article {
-	width: 65%;
+  line-height: 1.8em;
+  padding: 0;
+}
+
+article > div > div > div > div {
+  width: 59.8%;
+  display: block;
+  float: left;
+  padding-right: 1em;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box
+}
+
+article .rightCol {
+  padding-right: 0;
+  padding-left: 1em;
+  display: block;
+  float: right !important;
+  width: 40.2%;
+  border-left: 2px solid #333;
+  border-bottom: 2px solid #333;
 }
 
 .region-highlighted {
@@ -428,12 +451,16 @@ span.field-label { /* The inline field label used by the Fences module */
  */
 
 #footer {
-  font-family: courier;
+  clear: both;
+  font-family: "adrianna-extended";
+  line-height: 1.5em;
+  font-size: .8em;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 footer > div {
   border-top: 3px solid #333;
-  border-bottom: 6px solid #333;
   margin-bottom: 4em;
 }
 
