--- a/sites/all/themes/accurate/css/pages.css
+++ b/sites/all/themes/accurate/css/pages.css
@@ -14,7 +14,7 @@
 
 html, body {
   color: #222;
-  background-color: #e2dbc5;
+  background-color: #fff;
   margin: 0;
   padding: 0;
   font: 16px Georgia, "Times New Roman", Times , Serif;
@@ -53,7 +53,7 @@ html, body {
 }
 
 .contentWidth {
-  width: 75%;
+  width: 85%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -61,8 +61,8 @@ html, body {
  
 
 header {
-  font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
-  margin: 2em 0 0 0;
+  font-family: "proxima-nova", "Century Gothic", Helvetica, Arial, sans-serif;
+  margin: 1em 0 2em 0;
   text-transform: uppercase;
   padding: 1em 0 0 0;
 /*  color: #efebe3;*/
@@ -75,28 +75,46 @@ header > div {
 #masthead {
   font-family: "adrianna-extended";
   text-transform: uppercase;
-  padding-bottom: 1em;
-  border-bottom: 3px solid #333;
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
   overflow: auto;
   font-size: .8em;
 /*  font-weight: bold;*/
 }
 
-#masthead p {
-  display: inline-block;
-  width: 30%;
+#masthead > div {
+  display: block;
+  width: 33%;
   text-align: center;
   margin: 0 auto;
   float: left;
 }
 
+#masthead p {
+  margin: 0;
+  padding: 1em;
+  border-right: 2px solid #333;
+}
+
+#masthead .socialIcons {
+  font-family: 'sharetfpg' !important;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  font-size: 1.35em;
+}
+
+#masthead > div:last-child p {
+  border: none;
+}
+/*
 #masthead p:first-child {
-  margin-right: 5%;
+  border: 1px solid #333;
 }
 
 #masthead p:last-child {
   margin-left: 5%;
-}
+}*/
 
 #header h1, #header h2 {
   margin: 0;
@@ -104,12 +122,13 @@ header > div {
 }
 
 #header h1 {
-  display: none;
+  font: bold 2.2em/1em "proxima-nova";
   margin: .25em 0;
   color: #222;
-  font-size: 4em;
-  line-height: 1em;
-  text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;
+  text-transform: uppercase;
+  text-align: center;
+/*  letter-spacing: -.05em;*/
+/*  text-shadow: -2px 2px 0 #efeeeb, -6px 6px 0 #c5beb3;*/
   
 /*  overflow: hidden;
   text-indent: -9999em;
@@ -166,14 +185,15 @@ header > div {
 }
 
 #nav a:link, #nav a:visited {
-border-right: 2px solid #333;
+border-right: 3px solid #333;
   padding: 8px 0;
 /*  padding: 8px 6px 8px 8px;*/
   display: block;
   text-decoration: none;
-  font-size: 1.4em;
+  font-size: 1em;
   color: #333;
   font-weight: bold;
+  letter-spacing: .25em;
 /*  text-shadow: -1px 1px 0 #efeeeb, -3px 3px 0 #c5beb3;*/
 }
 
@@ -200,7 +220,7 @@ border-right: 2px solid #333;
 /* @group Product Filters */
 
 .productFilterBar {
-  font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova", "Century Gothic", Helvetica, Arial, sans-serif;
 /*  letter-spacing: .3em;*/
   font-weight: bold;
   padding: .5em 0;
@@ -282,7 +302,7 @@ border-right: 2px solid #333;
  
 h2 {
   text-transform: uppercase;
-  font-family: "liquor-store", "Century Gothic", Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova", "Century Gothic", Helvetica, Arial, sans-serif;
 /*  letter-spacing: .3em;*/
   font-size: 1.4em;
   line-height: 1em;
