Added header gradient when overlaid

--- a/sites/all/themes/alh/css/pages.css
+++ b/sites/all/themes/alh/css/pages.css
@@ -108,11 +108,20 @@ header > div {
 /* @group Overlay Header */
 
 header.overlay {
+  width: 100%;
   position: absolute;
   z-index: 999;
   top: 10px;
   color: #fff;
   -webkit-font-smoothing: antialiased;
+  
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-8 */
 }
 
 header.overlay #nav {
@@ -125,11 +134,12 @@ header.overlay a:link, header.overlay a:visited {
 }
 
 header.overlay a:hover, header.overlay a:active {
+  text-decoration: underline;
   background-color: rgba(255,255,255, 0.2);
 }
 
 header.overlay h1#logo a {
-   background: url(assets/logo-w.png) no-repeat center;
+   background: url(assets/logo-w.png) no-repeat left;
 }
 
 /* @end */
