Added flexslider override

--- a/sites/all/themes/alh/css/flexslider.css
+++ b/sites/all/themes/alh/css/flexslider.css
@@ -38,7 +38,19 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider {background: #fff; position: relative; zoom: 1;}
+
+#featuredContent div {
+  width: 100%;
+  height: 100%;
+}
+
+.flexslider {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  position: relative;
+  zoom: 1;
+}
 .flexslider .slides {zoom: 1;}
 .flexslider .slides > li {position: relative; }
 /* Suggested container for "Slide" animation setups. Can replace this with your own, if you wish */
