--- a/sites/all/themes/alhx/css/ksocial.css
+++ b/sites/all/themes/alhx/css/ksocial.css
@@ -1,31 +1,60 @@
 @font-face {
-  font-family: 'sharetfpg';
-  src: url('fonts/sharetfpg.eot?32349097');
-  src: url('fonts/sharetfpg.eot?32349097#iefix') format('embedded-opentype'),
-       url('fonts/sharetfpg.woff?32349097') format('woff'),
-       url('fonts/sharetfpg.ttf?32349097') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'icons';
+	src:url('fonts/icons.eot');
+	src:url('fonts/icons.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icons.woff') format('woff'),
+		url('fonts/icons.ttf') format('truetype'),
+		url('fonts/icons.svg#icons') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
-[class^="kicon-share-"]:before,
-[class*=" kicon-share-"]:before {
-  font-family: 'sharetfpg';
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: 0.2em;
-  text-align: center;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1em;
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+	font-family: 'icons';
+	content: attr(data-icon);
+	speak: none;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
 }
 
-.kicon-share-gplus:before { content: '\2b'; }
-.kicon-share-pinterest:before { content: '\31'; }
-.kicon-share-twitter:before { content: '\54'; }
-.kicon-share-facebook:before { content: '\66'; }
-.kicon-share-plus-squared:before { content: '\229e'; }
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"] {
+*/
+.icon-twitter, .icon-share, .icon-feed, .icon-facebook, .icon-location, .icon-phone, .icon-envelop {
+	font-family: 'icons';
+	speak: none;
+	font-style: normal;
+	font-weight: normal !important;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+}
+.icon-twitter:before {
+	content: "\74";
+}
+.icon-share:before {
+	content: "\73";
+}
+.icon-feed:before {
+	content: "\72";
+}
+.icon-facebook:before {
+	content: "\66";
+}
+.icon-location:before {
+	content: "\6c";
+}
+.icon-phone:before {
+	content: "\70";
+}
+.icon-envelop:before {
+	content: "\6d";
+}
