--- a/sites/all/themes/alhx/css/pages.css
+++ b/sites/all/themes/alhx/css/pages.css
@@ -31,6 +31,14 @@ body {
   width: 100%;
 }
 
+a:link, a:visited {
+  color: #2c6bc6;
+}
+
+a:hover, a:active {
+  text-decoration: none;
+}
+
 #page {
   overflow: auto;
   border-top: 10px solid #bc3f3f;
@@ -78,27 +86,27 @@ header, .mainNav {
 }
 
 header > div {
-  padding: 2em;
+  padding-top: 2em;
+  width: 10em;
 }
 
 /* @group Social Media / Contact Icons */
 
 .contactIcons {
-  margin-top: 1em;
-  display: block;
+  margin: 1em auto;
   position: fixed;
   bottom: 0em;
-  width: 200px;
+  width: 10em;
 }
 
 .contactIcons ul {
+  text-align: center;
   padding: 0;
 }
 
 .contactIcons ul li {
   font-size: 1.2em;
-  display: inline-block;
-  text-align: center;
+  display: inline;
 }
 
 .contactIcons a:link, .contactIcons a:visited {
@@ -206,13 +214,15 @@ ul.socialIcons li a {
 
 /* @end */
 
+/* @group Header */
+
 .header h1, .header h2 {
   margin: 0;
   padding: 0;
 }
 
 .header .logoCol {
-  padding-right: 2em;
+
 }
 
 .header {
@@ -273,16 +283,9 @@ h1.logo a:hover span, h1.logo a:active span {
   margin: 1em auto 0 auto;
 }
 
-#madeinBadge h1 {
-/*  margin-top: -1.8em;*/
-  background: url(assets/madeinStamford.png) no-repeat;
-  width: 180px;
-  height: 180px;
-  display: none;
-  text-indent: -999em;
-  position: absolute;
-  right: 180px;
-}
+/* @end */
+
+/* @group Main Navigation */
 
 .mainNav > div {
   padding: 2em 2em 2em 4em;
@@ -324,15 +327,7 @@ h1.logo a:hover span, h1.logo a:active span {
   text-decoration: underline;
 }
 
-#logo { /* Wrapping link for logo */
-  float: left; /* LTR */
-  margin: 0;
-  padding: 0;
-}
-
-#logo img {
-  vertical-align: bottom;
-}
+/* @end */
 
 /* @group Product Filters */
 
@@ -386,6 +381,47 @@ h1.logo a:hover span, h1.logo a:active span {
 }
 
 /* @end */
+/* @group Content Column */
+
+#content {
+ padding-top: 2em;
+}
+
+#content > div {
+  padding: 0 2em;
+}
+
+#content h2 {
+  font: bold 1.6em/1.5em "futura-pt", "century gothic", "helvetica", "arial", "sans-serif";
+}
+
+#content ul {
+  padding: 0;
+}
+
+#content article {
+  line-height: 1.8em;
+  padding: 0;
+}
+
+.region-highlighted {
+}
+
+.breadcrumb { /* The path to the current page in the form of a list of links */
+}
+.breadcrumb ol {
+  margin: 0;
+  padding: 0;
+}
+.breadcrumb li {
+  display: inline;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* @end */
+
 #name-and-slogan { /* Wrapper for website name and slogan */
   float: left;
 }
@@ -424,57 +460,6 @@ h1.logo a:hover span, h1.logo a:active span {
 /*
  * Content
  */
- 
- /* @group Content Column */
- 
- #content {
- 
- }
- 
- #content h2 {
-     font: bold 1.6em/1.5em "futura-pt", "century gothic", "helvetica", "arial", "sans-serif";
- }
- 
- #content article {
-   line-height: 1.8em;
-   padding: 0;
- }
- 
- article > div > div > div > div {
-   width: 59.8%;
-   display: block;
-   float: left;
-   padding-right: 1em;
-   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-   box-sizing: border-box
- }
- 
- article .rightCol {
-   padding-right: 0;
-   padding-left: 1em;
-   display: block;
-   float: right !important;
-   width: 40.2%;
- }
- 
- .region-highlighted {
- }
- 
- .breadcrumb { /* The path to the current page in the form of a list of links */
- }
- .breadcrumb ol {
-   margin: 0;
-   padding: 0;
- }
- .breadcrumb li {
-   display: inline;
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
- }
- 
- /* @end */
  
  h1.title, /* The title of the page */
 h2.node-title, /* Title of a piece of content when it is given in a list of content */
@@ -596,7 +581,7 @@ footer {
 
 footer > div {
   border-top: 1px solid #bc3f3f;
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 /* @end */
