--- a/sites/all/themes/alhx/css/flexslider.css
+++ b/sites/all/themes/alhx/css/flexslider.css
@@ -50,6 +50,18 @@ html[xmlns] .slides {display: block;}
 /*  z-index: 10 !important;*/
 }
 
+
+.flexslider .caption {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  color: #fff !important;
+}
+
+.flexslider .caption a {
+} 
+
 .flex-viewport {max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
 .loading .flex-viewport {max-height: 300px;}
 .flexslider .slides {zoom: 1;}
