--- a/sites/all/themes/alhx/css/nodes.css
+++ b/sites/all/themes/alhx/css/nodes.css
@@ -5,6 +5,10 @@
  * Style anything that isn't in the $content variable.
  */
 
+.profileTile {
+	width: 32%;
+	float: left;
+	}
 
 .node { /* Node wrapper */
 }
